--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Finance Manager App</title>
     <link href="./output.css" rel="stylesheet" />
+    <script src="./main.js" type="module" defer></script>
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline text-red-600">Hello world!</h1>
-
-    <script src="./src/main.js"></script>
+    <div id="app"></div>
   </body>
 </html>
